--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.57",
   "dependencies": {
     "autoprefixer": "^10.4.8",
-    "next": "12.1.3",
+    "next": "latest",
     "postcss": "^8.4.14",
     "react": "^18",
     "react-dom": "^18",
@@ -23,6 +23,7 @@
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "@types/react": "^18",
+    "@types/node": "^18.6.4",
     "bun-framework-next": "^12",
     "typescript": "latest",
     "react-refresh": "0.10.0"
@@ -37,6 +38,6 @@
     "build": "next build",
     "dev": "next dev",
     "prepare": "husky install",
-    "build-tailwindcss": "npx tailwindcss -i src/styles/globals.css -o src/styles/dist/main.css --watch"
+    "build-tailwindcss": "npx tailwindcss -i src/styles/globals.css -o public/dist/main.css"
   }
 }
