fix: add a rule to handle React import inside JSX files

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,7 @@
       {
         "exceptions": ["Component"] // Skip the spread props for Component only.
       }
-    ]
+    ],
+    "plugin:react/jsx-runtime": "extends"
   }
 }
